--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,7 +29,7 @@ input {
     padding: 15px;
     border-radius: 20px;
     font-size: 20px;
-    margin: 0;
+    margin: 10px 0;
     padding-left: 60px;
     padding-right: 60px;
 }
@@ -39,11 +39,7 @@ button {
     background-color: hotpink;
     text-align: center;
     border: 0;
-    padding-left: 110px;
-    padding-right: 110px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 10px;
+    padding: 15px;
     font-size: 20px;
     margin-top: 20px;
     transition: background-color 0.4s, opacity 0.4s;
