--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,11 @@ input {
     background-color: aqua;
     text-align: center;
     border: 0;
-    padding: 15px;
+    padding-left: 110px;
+    padding-right: 110px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
     border-radius: 20px;
     font-size: 20px;
     margin: 10px 0;
@@ -39,7 +43,11 @@ button {
     background-color: hotpink;
     text-align: center;
     border: 0;
-    padding: 15px;
+    padding-left: 110px;
+    padding-right: 110px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10px;
     font-size: 20px;
     margin-top: 20px;
     transition: background-color 0.4s, opacity 0.4s;
